// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row component should render correctly with alignItems prop 1`] = `
<div
  className="sc-kFuwaP ffZqYb"
/>
`;

exports[`Row component should render correctly with margin all sides prop 1`] = `
<div
  className="sc-kFuwaP gvwdnw"
/>
`;

exports[`Row component should render correctly with margin each axis prop 1`] = `
<div
  className="sc-kFuwaP hWNrAr"
/>
`;

exports[`Row component should render correctly with margin each sides props 1`] = `
<div
  className="sc-kFuwaP dsHZsi"
/>
`;

exports[`Row component should render correctly without props 1`] = `
<div
  className="sc-kFuwaP dYeYdA"
/>
`;
